Freecell Solver's News File
===========================
Shlomi Fish <shlomif@cpan.org>
:Date: 2016-01-14
:Revision: $Id$

Version 4.2.0: (FILL IN)
------------------------

1. Remove FCS_STATE_STORAGE_INDIRECT - it was old and slow and the hash lookup
or a balanced binary tree should be used instead.

Version 4.0.2: (14-Jan-2016)
----------------------------

1. Correct tarball release - 4.0.1 should not be used.

Version 4.0.1: (14-Jan-2016)
----------------------------

1. Fix the tests for the new Games-Solitaire-Verify (0.1601).

2. Apply a patch from http://www.mageia.org/[Mageia] to prevent underlinking
during build. Thanks!

3. Disable linking to the gperftools’ tcmalloc library if the test suite
is enabled due to https://github.com/gperftools/gperftools/issues/758 .

Version 4.0.0: (27-Sep-2015)
----------------------------

1. Integrate the scans of Tom Holroyd’s patsolve, for a faster atomic
moves-based solver. See the +--method patsolve+, +--patsolve-x-param+
and +--patsolve-y-param+ options in the +USAGE.txt+ file.

2. Add the +-dto2+ / +--depth-tests-order2+ flag to provide a corrected
version of the depth-tests-order feature without the depth string and comma
being prefixed to the tests order due to an oversight.

3. Convert the Python code (tests + board generation) to Python 3, because
it seems that Python 2 is going away. To run it, we require the "random2"
module from PyPI : https://pypi.python.org/pypi/random2 .

4. Many small cleanups and optimisations.

5. Source tarball is now “.tar.xz”.

Version 3.26.0: (19-May-2014)
-----------------------------

1. Remove the documents (e.g: +README+, +COPYING+, +AUTHORS+), which
have duplicates with a .txt extension from the source distribution, to save
space. They are still being copied to their location in the BINARY_DIR
where cmake is invoked from.

2. Fix a division/modulo by zero problem that yielded a floating-point
exception, as reported by the Mayhem team to the Debian bug tracker: