@@ -4,7 +4,6 @@ WITH_TRACES = 0
 FREECELL_ONLY = 1
 DISABLE_PATSOLVE = 0
 DISABLE_SIMPLE_SIMON := 0
-WITHOUT_CARD_FLIPS := 0
 WITH_LIBRB = 0
 OPT_FOR_SIZE = 0
 OPT_AND_DEBUG = 0
@@ -132,10 +131,6 @@ endif
 
 ifneq ($(DISABLE_PATSOLVE),0)
 	CFLAGS += -DFCS_DISABLE_PATSOLVE=1
-endif
-
-ifneq ($(WITHOUT_CARD_FLIPS),0)
-	CFLAGS += -DFCS_WITHOUT_CARD_FLIPPING=1
 endif
 
 EXTRA_CFLAGS =
